--- a/mops.toml
+++ b/mops.toml
@@ -1,7 +1,7 @@
 [package]
 name = "tweetnacl"
-version = "1.0.3"
-description = "Port of [TweetNaCl](http://tweetnacl.cr.yp.to) / [NaCl](http://nacl.cr.yp.to/)to Motoko for icp canister (wasm runtime). Public domain."
+version = "1.1.0"
+description = "Port of [TweetNaCl](http://tweetnacl.cr.yp.to) / [NaCl](http://nacl.cr.yp.to/)to Motoko for icp canister (wasm runtime)."
 repository = "https://github.com/nirvana369/tweetnacl/"
 keywords = [
   "signature",
