--- a/mops.toml
+++ b/mops.toml
@@ -1,3 +1,5 @@
+dependencies = { }
+
 [package]
 name = "tweetnacl"
 version = "1.1.1"
@@ -16,9 +18,6 @@ keywords = [
 ]
 license = "MIT"
 
-[dependencies]
-base = "0.13.0"
-
 [dev-dependencies]
-test = "2.0.0"
+test = "2.1.1"
 bench = "1.0.0"
